recursion.cons.lessons.recursion.cons.Length.scala.error
length:6: error: value tail is not a member of object List
    return 1+length(List.tail)
                         ^