recursion.cons.lessons.recursion.cons.Length.scala.code
def length(l:List[Int]): Int = {
  if(List==Nil){
    return 0
  }
  else{
    return 1+length(List.tail)
  }
}